--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
-    "express": "4.18.2"
+    "express": "4.18.2",
+    "nodemon": "^3.1.7",
+    "socket.io": "4.6.1"
+  },
+  "scripts": {
+    "dev": "nodemon app.js"
   }
 }
